# quagga

./: .gitignore  ChangeLog  HACKING  HACKING.md  HACKING.pending  Makefile.am  NEWS  RE-ipv6_nd_ra.txt  RE-rip4822.txt  buildtest.sh  config.h.in  configure-quagga  configure.ac  configure.in  mkinstalldirs  release.sh
babeld/: Makefile.am  babeld.c
bgpd/: ChangeLog  Makefile.am  Makefile.in  bgp.h  bgp_advertise.c  bgp_advertise.h  bgp_aspath.c  bgp_aspath.h  bgp_attr.c  bgp_attr.h  bgp_btoa.c  bgp_clist.c  bgp_clist.h  bgp_common.c  bgp_common.h  bgp_community.c  bgp_community.h  bgp_connection.c  bgp_connection.h  bgp_damp.c  bgp_debug.c  bgp_debug.h  bgp_dump.c  bgp_dump.h  bgp_ecommunity.c  bgp_ecommunity.h  bgp_encap.c  bgp_engine.c  bgp_engine.h  bgp_filter.c  bgp_filter.h  bgp_fsm.c  bgp_fsm.h  bgp_fsm.x  bgp_fsm_4271.dot  bgp_fsm_quagga.dot  bgp_main.c  bgp_mpath.c  bgp_mpath.h  bgp_mplsvpn.c  (+45 more)
debian/: README.Debian  README.Debian.MD5  README.Debian.Woody  README.Maintainer  changelog  control  copyright  quagga.dirs  quagga.docs  quagga.files  quagga.init.d  quagga.logrotate  quagga.manpages  quagga.postrm  quagga.preinst  rules  watch
debian/my/: config.h.reference  daemons
debian/po/: cs.po  de.po  es.po  fr.po  nl.po  pt.po  sv.po
doc/: .gitignore  BGP-TypeCode  ChangeLog  Makefile.am  Makefile.in  README.LLS-for-TE.md  bgpd.texi  commit-template.txt  install.texi  ipv6.texi  main.texi  nhrpd.texi  ospfd.8  ospfd.texi  pimd.8  quagga.info  quagga.texi  ripd.texi  ripngd.8  routeserver.texi  texinfo.tex  zebra.8  zebra.info  zebra.texi
doc/security/: Quagga-2018-0543.txt  Quagga-2018-1114.txt  Quagga-2018-1550.txt  Quagga-2018-1975.txt  template.txt
infra/buildbot/master/: master.cfg  pass.cfg
infra/patchwork/: pass.py  production.py
isisd/: ChangeLog  Makefile.am  dict.c  dict.h  isis_adjacency.c  isis_bpf.c  isis_circuit.c  isis_circuit.h  isis_csm.c  isis_dlpi.c  isis_events.c  isis_flags.c  isis_lsp.c  isis_main.c  isis_misc.c  isis_misc.h  isis_pdu.c  isis_pfpacket.c  isis_route.c  isis_routemap.c  isis_spf.c  isis_te.c  isis_te.h  isis_tlv.c  isis_tlv.h  isis_zebra.c  isis_zebra.h  isisd.c  isisd.h
isisd/topology/: spgrid.c
lib/: ChangeLog  Makefile.am  avl.c  avl.h  buffer.c  buffer.h  command.c  command.h  command_common.h  command_execute.c  command_execute.h  command_local.h  command_parse.c  command_parse.h  command_queue.c  command_queue.h  confirm.h  cryptohash.c  cryptohash.h  daemon.c  distribute.c  distribute.h  elstring.c  elstring.h  errno_names.c  errno_names.h  filter.c  filter.h  getopt.c  getopt.h  getopt1.c  hash.c  hash.h  heap.c  heap.h  if.c  if.h  if_rmap.c  if_rmap.h  keychain.c  (+137 more)
nhrpd/: Makefile.am  README.kernel  README.nhrpd  linux.c  netlink.c  netlink.h  nhrp-events.lua  nhrp_cache.c  nhrp_event.c  nhrp_interface.c  nhrp_main.c  nhrp_nhs.c  nhrp_peer.c  nhrp_route.c  nhrp_shortcut.c  nhrp_vc.c  nhrp_vty.c  nhrpd.h  os.h  reqid.c  vici.c  zbuf.h
ospf6d/: ChangeLog  Makefile.am  ospf6_abr.c  ospf6_abr.h  ospf6_area.c  ospf6_asbr.c  ospf6_asbr.h  ospf6_flood.c  ospf6_interface.c  ospf6_interface.h  ospf6_intra.c  ospf6_lsa.c  ospf6_lsdb.c  ospf6_main.c  ospf6_message.c  ospf6_network.c  ospf6_route.c  ospf6_route.h  ospf6_snmp.c  ospf6_spf.c  ospf6_top.c  ospf6_zebra.c  ospf6_zebra.h  ospf6d.c  ospf6d.h
ospfclient/: Makefile.am
ospfd/: ChangeLog  Makefile.am  Makefile.in  ospf_abr.c  ospf_api.c  ospf_apiserver.c  ospf_apiserver.h  ospf_asbr.c  ospf_asbr.h  ospf_ase.c  ospf_dump.c  ospf_flood.c  ospf_ia.c  ospf_interface.c  ospf_interface.h  ospf_ism.c  ospf_lsa.c  ospf_lsa.h  ospf_lsdb.h  ospf_main.c  ospf_neighbor.c  ospf_neighbor.h  ospf_network.c  ospf_nsm.c  ospf_opaque.c  ospf_opaque.h  ospf_packet.c  ospf_packet.h  ospf_ri.c  ospf_route.c  ospf_routemap.c  ospf_snmp.c  ospf_spf.c  ospf_te.c  ospf_te.h  ospf_vty.c  ospf_vty.h  ospf_zebra.c  ospf_zebra.h  ospfd.c  (+1 more)
pimd/: .gitignore  CAVEATS  COMMANDS  DEBUG  LINUX_KERNEL_MROUTE_MFC  Makefile.am  README  TODO  WHY_SSM  github-git-clone.sh  pim_assert.c  pim_assert.h  pim_cmd.c  pim_cmd.h  pim_hello.c  pim_hello.h  pim_iface.c  pim_iface.h  pim_ifchannel.c  pim_igmp.c  pim_igmp.h  pim_igmp_join.c  pim_igmpv3.c  pim_join.c  pim_join.h  pim_main.c  pim_mroute.c  pim_msg.c  pim_msg.h  pim_neighbor.c  pim_oil.c  pim_pim.c  pim_pim.h  pim_rpf.c  pim_signals.c  pim_sock.c  pim_sock.h  pim_ssmpingd.c  pim_ssmpingd.h  pim_static.c  (+22 more)
redhat/: ospfd.service  quagga.spec.in  ripngd.service
ripd/: ChangeLog  Makefile.am  rip_auth.c  rip_auth.h  rip_debug.c  rip_debug.h  rip_interface.c  rip_interface.h  rip_main.c  rip_main.h  rip_offset.c  rip_offset.h  rip_peer.c  rip_peer.h  rip_routemap.c  rip_routemap.h  rip_snmp.c  rip_snmp.h  rip_zebra.c  rip_zebra.h  ripd.c  ripd.h
ripngd/: ChangeLog  Makefile.am  ripng_interface.c  ripng_main.c  ripng_zebra.c  ripngd.c  ripngd.h
solaris/: Makefile.am  quagga.init.in
tests/: ChangeLog  Makefile.am  aspath_test.c  bgp_capability_test.c  bgp_mp_attr_test.c  bgp_mpath_test.c  ecommunity_test.c  heavy-thread.c  heavy-wq.c  heavy.c  main.c  test-avl.c  test-buffer.c  test-checksum.c  test-list_util.c  test-memory.c  test-prefix.c  test-privs.c  test-qfs.c  test-qpath.c  test-sig.c  test-stream.c  test-symtab.c  test-vector.c
tools/: multiple-bgpd.sh
vtysh/: ChangeLog  Makefile.am  Makefile.in  extract.pl  extract.pl.in  vtysh.c  vtysh.h  vtysh_cmd.c  vtysh_config.c  vtysh_main.c  vtysh_user.c  vtysh_user.h
watchquagga/: Makefile.am  watchquagga.c
zebra/: ChangeLog  Makefile.am  Makefile.in  client_main.c  connected.c  connected.h  debug.c  debug.h  if_ioctl.c  if_ioctl_solaris.c  if_method.h  if_netlink.c  if_proc.c  if_sysctl.c  interface.c  interface.h  ioctl.c  ioctl.h  ioctl_null.c  ioctl_solaris.c  ipforward.h  ipforward_aix.c  ipforward_ews.c  ipforward_proc.c  ipforward_solaris.c  ipforward_sysctl.c  irdp.h  irdp_interface.c  irdp_main.c  irdp_packet.c  kernel_null.c  kernel_socket.c  main.c  misc_null.c  mtu_kvm.c  redistribute.c  redistribute.h  redistribute_null.c  rib.h  router-id.c  (+26 more)
(+5 files in other folders)
